[metadata]
name = scuff
version = attr: scuff.__version__
author = akyuute
description = A config file format and transpiler suite written in Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/akyuute/scuff
copyright = Copyright (c) 2023-present by akyuute

project_urls =
    GitHub: repo = https://github.com/akyuute/scuff

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: AST
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    # Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Desktop Environment
    Topic :: Utilities

license = MIT
license_files = LICENSE
keywords = parsing, compilers, api, ast

platforms = Platform Independent


[options]
packages = find:
# install_requires = file: requirements.txt
python_requires = >= 3.12
